--- a/app/css/base.css
+++ b/app/css/base.css
@@ -1,7 +1,59 @@
 body {
   margin: 0;
   padding: 0;
-  text-align: center; }
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  background: #eee;
+  position: relative; }
+
+h1 {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+  width: 100vw;
+  z-index: 2;
+  font-size: 3rem;
+  font-family: 'Oswald', sans-serif;
+  text-shadow: 1px 1px rgba(238, 238, 238, 0.5);
+  animation: showh1 3s ease; }
+
+@keyframes showh1 {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+g {
+  position: relative; }
 
 svg {
-  background: #eee; }
+  background: #eee;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+circle {
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  -moz-transform-origin: 50% 50%;
+  transform-origin: 50% 50%; }
+
+.text {
+  font-family: 'Oswald', sans-serif;
+  font-size: 2rem;
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-shadow: 1px 1px rgba(238, 238, 238, 0.5); }
+
+@media only screen and (max-device-width: 600px) and (orientation: portrait) {
+  h1 {
+    font-size: 5.5rem;
+    top: 5vh; }
+  .text {
+    font-size: 4rem;
+    bottom: 10vh; } }
