--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -45,17 +45,50 @@ circle {
   transform-origin: 50% 50%;
 }
 
-.text {
-  font-family: 'Oswald', sans-serif;
-  font-size: 2rem;
+.btnAndText {
+  margin-bottom: 1rem;
   position: absolute;
   bottom: 0%;
   left: 50%;
   transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+}
+
+.separate,
+.combine {
+  outline: none;
+  margin: 1rem;
+  display: inline-block;
+  font-family: 'Oswald', sans-serif;
+  border: 1px solid #000;
+  background: #fff;
+  font-size: 1.3rem;
+  transition: color 0.3s ease, background 0.3s ease;
+  &:hover {
+    background: #000;
+    color: #fff;
+  }
+}
+
+.separate {
+
+}
+
+.combine {
+
+}
+
+.text {
+  margin: 0;
+  font-family: 'Oswald', sans-serif;
+  font-size: 2rem;
   text-shadow: 1px 1px rgba(238, 238, 238, 0.5);
 }
 
-@media only screen and (max-device-width: 600px) and (orientation: portrait) {
+/*@media only screen and (max-device-width: 600px) and (orientation: portrait) {
   h1 {
     font-size: 5.5rem;
     top: 5vh;
@@ -64,5 +97,5 @@ circle {
     font-size: 4rem;
     bottom: 10vh;
   }
-}
+}*/
 
